# NYCU_DL

lab2/: .gitignore  requirements.txt  submission_resnet34_unet.csv  日誌.md
lab2/src/: inference.py  oxford_pet.py  train.py
lab2/src/models/: resnet34_unet.py  unet.py
lab5/: requirements.txt
lab5_uv/: .gitignore  dqn.py  eval_score.py  pyproject.toml  test.py
lab6_uv/: .gitignore  dataloader.py  model.py  pyproject.toml  test.py  train.py
lab6_uv/file/: evaluator.py
