[project]
name = "lab5-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium>=1.3.0",
    "imageio>=2.37.3",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
